# file_worker_test

./: CMakeLists.txt  README.md
include/: AhoCorasick.hpp  ArgumentParser.hpp  CheckSumMode.hpp  CommandLineOptions.hpp  FileReader.hpp  HelpMode.hpp  IMode.hpp  WordCountMode.hpp
src/: AhoCorasick.cpp  ArgumentParser.cpp  ChecksumMode.cpp  FileReader.cpp  HelpMode.cpp  WordCountMode.cpp  main.cpp
tests/: CMakeLists.txt  test_argument_parser.cpp  test_checksum.cpp  test_word_and_entry_count.cpp
tests/include/: CreateTempFile.hpp  TestUtl.hpp
tests/tools/: get_32bit_sum.sh
